force-app/main/default/objects/Account/fields/Account_Record_Type_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Hidden__c</fullName>
    <description>Field is used to map Lead Record Type to Account Record Type</description>
    <label>Account Record Type (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>