force-app/main/default/objects/Account/fields/Active_Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Portal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Arkus, Inc. (AVP) - This is to indicate whether an account is currently active and is controlled via flow automation.</description>
    <label>Active Portal Account</label>
    <type>Checkbox</type>
</CustomField>