force-app/main/default/objects/Account/fields/Adults__c.field-meta.xml
<CustomField>
    <fullName>Adults__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recipient type includes adults</description>
    <label>Adults</label>
    <type>Checkbox</type>
</CustomField>