force-app/main/default/objects/Account/fields/Adults_Served_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Adults_Served_per_Month__c</fullName>
    <description>Adults receiving incontinence supplies.</description>
    <inlineHelpText>Adults receiving incontinence supplies.</inlineHelpText>
    <label>Adults (incontinence) Served Monthly</label>
    <length>255</length>
    <type>Text</type>
</CustomField>