force-app/main/default/objects/Account/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Diaper Bank Agreement is on file for this account.</description>
    <label>2013 Agreement on File</label>
    <type>Checkbox</type>
</CustomField>