force-app/main/default/objects/Account/fields/Allied_Member_for_3_months__c.field-meta.xml
<CustomField>
    <fullName>Allied_Member_for_3_months__c</fullName>
    <description>Allied members over 3 months are eligible for donations. This is for the member portal.</description>
    <formula>IF(
    APS_Membership_Date__c &lt; TODAY() - 89,
    &quot;Yes&quot;,
    IF(
        AND(
            APS_Membership_Date__c &gt;= TODAY() - 89,
            APS_Membership_Date__c &lt;= TODAY() + 364
        ),
        &quot;No&quot;,
        &quot;&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Allied members over 3 months are eligible for donations. This is for the member portal.</inlineHelpText>
    <label>Allied Member for 3 months</label>
    <type>Text</type>
</CustomField>