force-app/main/default/objects/Account/fields/Ann_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Ann_Survey_URL__c</fullName>
    <description>Link to 2020 Form Assembly Survey Response</description>
    <label>Ann Survey URL</label>
    <type>Url</type>
</CustomField>