force-app/main/default/objects/Account/fields/Annual_Diaper_Expense__c.field-meta.xml
<CustomField>
    <fullName>Annual_Diaper_Expense__c</fullName>
    <inlineHelpText>How much do you spend on diapers each year?</inlineHelpText>
    <label>Annual Diaper Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>