force-app/main/default/objects/Account/fields/Annual_distribution_is_at_least_225_000__c.field-meta.xml
<CustomField>
    <fullName>Annual_distribution_is_at_least_225_000__c</fullName>
    <formula>IF(Total_Diaper_Distribution_Last_Year__c &gt;= 225000, 
&quot;Yes&quot;, 
&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yes if annual distribution last year was &gt;= 225,000</inlineHelpText>
    <label>Annual distribution is at least 225,000</label>
    <type>Text</type>
</CustomField>