force-app/main/default/objects/Account/fields/Annual_Operating_Budget__c.field-meta.xml
<CustomField>
    <fullName>Annual_Operating_Budget__c</fullName>
    <inlineHelpText>What is your annual operating budget?</inlineHelpText>
    <label>Annual Operating Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>