force-app/main/default/objects/Account/fields/Annual_Period_Product_Expense__c.field-meta.xml
<CustomField>
    <fullName>Annual_Period_Product_Expense__c</fullName>
    <label>Annual Period Product Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>