force-app/main/default/objects/Account/fields/Annual_Survey_2013__c.field-meta.xml
<CustomField>
    <fullName>Annual_Survey_2013__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed the 2013 annual NDBN diaper bank report</description>
    <label>Annual Survey 2013</label>
    <type>Checkbox</type>
</CustomField>