force-app/main/default/objects/Account/fields/Annual_Survey_2014__c.field-meta.xml
<CustomField>
    <fullName>Annual_Survey_2014__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Completed the 2014 annual diaper bank report</description>
    <label>Annual Survey 2014</label>
    <type>Checkbox</type>
</CustomField>