force-app/main/default/objects/Account/fields/Annual_Survey_2015__c.field-meta.xml
<CustomField>
    <fullName>Annual_Survey_2015__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies whether diaper bank completed report for completed 2015 year.</description>
    <label>Annual Survey 2015</label>
    <type>Checkbox</type>
</CustomField>