force-app/main/default/objects/Account/fields/Annual_Survey_Review_Note__c.field-meta.xml
<CustomField>
    <fullName>Annual_Survey_Review_Note__c</fullName>
    <inlineHelpText>For tracking what reviewers might want to share or discuss about this year&apos;s annual member survey</inlineHelpText>
    <label>Annual Survey Review Note</label>
    <length>150</length>
    <type>Text</type>
</CustomField>