force-app/main/default/objects/Account/fields/Annual_Survey_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Annual_Survey_Submitted__c</fullName>
    <description>&quot;Yes&quot; will display if survey has been submitted and &quot;No&quot; will display if the survey has NOT been submitted</description>
    <formula>IF( (YEAR( FA_Date_Submitted__c ) &gt;= YEAR(DATEVALUE( NOW() ))),
&quot;Yes&quot;,
&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the current Annual Member Survey has been submitted</inlineHelpText>
    <label>Annual Survey Submitted</label>
    <type>Text</type>
</CustomField>