force-app/main/default/objects/Account/fields/AnSrv_Total_APS_Distribution_2021__c.field-meta.xml
<CustomField>
    <fullName>AnSrv_Total_APS_Distribution_2021__c</fullName>
    <inlineHelpText>Pulls total distribution for APS program from the annual survey</inlineHelpText>
    <label>AnSrv Total APS Distribution 2021</label>
    <summarizedField>Annual_Survey__c.Period_products_distributed__c</summarizedField>
    <summaryFilterItems>
        <field>Annual_Survey__c.Submit_Date_AnSv__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </summaryFilterItems>
    <summaryForeignKey>Annual_Survey__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>