force-app/main/default/objects/Account/fields/APS_1st_Period_Supply_Distribution__c.field-meta.xml
<CustomField>
    <fullName>APS_1st_Period_Supply_Distribution__c</fullName>
    <description>First period supply distribution date.</description>
    <inlineHelpText>First period supply distribution date.</inlineHelpText>
    <label>APS 1st Period Supply Distribution</label>
    <type>Date</type>
</CustomField>