force-app/main/default/objects/Account/fields/APS_2019_Total_Distribution__c.field-meta.xml
<CustomField>
    <fullName>APS_2019_Total_Distribution__c</fullName>
    <inlineHelpText>Total number of pads, liners and tampons distributed in 2019, provided on quarterly updates.</inlineHelpText>
    <label>APS 2019 Total Distribution</label>
    <summarizedField>APS_Update__c.Total_distributed__c</summarizedField>
    <summaryFilterItems>
        <field>APS_Update__c.Quarter_Closing_Date__c</field>
        <operation>greaterThan</operation>
        <value>12/31/2018</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>APS_Update__c.Quarter_Closing_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryForeignKey>APS_Update__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>