force-app/main/default/objects/Account/fields/Aps_2022_Mid_Year_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Aps_2022_Mid_Year_Distribution__c</fullName>
    <label>Aps 2022 Mid Year Distribution</label>
    <summarizedField>APS_Mid_Year_Survey__c.Total_Period_Productsd_Distributed__c</summarizedField>
    <summaryFilterItems>
        <field>APS_Mid_Year_Survey__c.APS_Year__c</field>
        <operation>equals</operation>
        <value>2022</value>
    </summaryFilterItems>
    <summaryForeignKey>APS_Mid_Year_Survey__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>