force-app/main/default/objects/Account/fields/APS_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>APS_Application_Date__c</fullName>
    <label>APS Application Date</label>
    <type>Date</type>
</CustomField>