force-app/main/default/objects/Account/fields/APS_Counties_Served__c.field-meta.xml
<CustomField>
    <fullName>APS_Counties_Served__c</fullName>
    <label>APS Counties Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>