force-app/main/default/objects/Account/fields/APS_Distribution_Frequency__c.field-meta.xml
<CustomField>
    <fullName>APS_Distribution_Frequency__c</fullName>
    <description>If more than one, select the more frequent</description>
    <inlineHelpText>If more than one, select the more frequent</inlineHelpText>
    <label>APS Distribution Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>alternate weeks or twice monthly</fullName>
                <label>Alternate Weeks or Twice Monthly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>