force-app/main/default/objects/Account/fields/APS_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>APS_Distribution_Method__c</fullName>
    <description>Values can be: Agencies, Individuals, both</description>
    <inlineHelpText>Individuals - Direct distribution of product to client; Agencies - Partner agencies distribute product to client; Both - Utilize both methods of product distribution</inlineHelpText>
    <label>APS Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Individuals</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>