force-app/main/default/objects/Account/fields/APS_Facebook__c.field-meta.xml
<CustomField>
    <fullName>APS_Facebook__c</fullName>
    <description>Facebook account used exclusively for APS.</description>
    <inlineHelpText>Period supply program website, if different than organization website</inlineHelpText>
    <label>APS Facebook</label>
    <type>Url</type>
</CustomField>