force-app/main/default/objects/Account/fields/APS_Individual_Served_Anually__c.field-meta.xml
<CustomField>
    <fullName>APS_Individual_Served_Anually__c</fullName>
    <label>APS Individual Served Anually</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>