force-app/main/default/objects/Account/fields/APS_Instagram__c.field-meta.xml
<CustomField>
    <fullName>APS_Instagram__c</fullName>
    <description>Instagram account used exclusively for APS.</description>
    <inlineHelpText>Instagram account used exclusively for period supply program</inlineHelpText>
    <label>APS Instagram</label>
    <type>Url</type>
</CustomField>