force-app/main/default/objects/Account/fields/APS_Member_End_Date__c.field-meta.xml
<CustomField>
    <fullName>APS_Member_End_Date__c</fullName>
    <description>This Date field captures today&apos;s date when APS member selected as Left Network.</description>
    <label>APS Member End Date</label>
    <type>Date</type>
</CustomField>