force-app/main/default/objects/Account/fields/APS_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>APS_Member_Type__c</fullName>
    <description>Allied Members have applied and been approved to join APS.
Both NDBN members and organizations outside NDBN can be Allied members.
Accepted Values are: Interested, Allied Organization</description>
    <inlineHelpText>Membership status for Alliance for Period Supplies</inlineHelpText>
    <label>APS Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>Allied Member</fullName>
            </value>
            <value>
                <fullName>Left Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>