force-app/main/default/objects/Account/fields/APS_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>APS_Membership_Date__c</fullName>
    <label>APS Membership Date</label>
    <type>Date</type>
</CustomField>