force-app/main/default/objects/Account/fields/APS_Mid_Year_Survey_Submission_date__c.field-meta.xml
<CustomField>
    <fullName>APS_Mid_Year_Survey_Submission_date__c</fullName>
    <label>APS Mid Year Survey Submission date</label>
    <summarizedField>APS_Mid_Year_Survey__c.Survey_submit_Date__c</summarizedField>
    <summaryForeignKey>APS_Mid_Year_Survey__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>