force-app/main/default/objects/Account/fields/APS_Partner_Agencies_This_Year__c.field-meta.xml
<CustomField>
    <fullName>APS_Partner_Agencies_This_Year__c</fullName>
    <inlineHelpText>The number of partner agencies that distribute product directly to clients</inlineHelpText>
    <label>APS Partner Agencies Served This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>