force-app/main/default/objects/Account/fields/APS_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>APS_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Primary point of contact for period supply program</inlineHelpText>
    <label>APS Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (APS Primary Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>