force-app/main/default/objects/Account/fields/APS_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>APS_Primary_Contact_Email__c</fullName>
    <formula>APS_Primary_Contact__r.Email</formula>
    <inlineHelpText>APS Primary point of contact&apos;s professional email address</inlineHelpText>
    <label>APS Primary Contact Email</label>
    <type>Text</type>
</CustomField>