force-app/main/default/objects/Account/fields/APS_Primary_Email__c.field-meta.xml
<CustomField>
    <fullName>APS_Primary_Email__c</fullName>
    <inlineHelpText>This field is no longer updated.</inlineHelpText>
    <label>XXXAPS Primary Email</label>
    <type>Email</type>
</CustomField>