force-app/main/default/objects/Account/fields/APS_Product_Donated__c.field-meta.xml
<CustomField>
    <fullName>APS_Product_Donated__c</fullName>
    <label>APS Product Donated (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>