force-app/main/default/objects/Account/fields/APS_Product_Purchased__c.field-meta.xml
<CustomField>
    <fullName>APS_Product_Purchased__c</fullName>
    <label>APS Product Purchased (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>