force-app/main/default/objects/Account/fields/APS_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>APS_Program_Name__c</fullName>
    <description>APS Program Name or Nickname</description>
    <inlineHelpText>Specific name for period supply program if different than organization name</inlineHelpText>
    <label>APS Program Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>