force-app/main/default/objects/Account/fields/APS_Program_Status__c.field-meta.xml
<CustomField>
    <fullName>APS_Program_Status__c</fullName>
    <label>APS Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Currently collect and distribute</fullName>
            </value>
            <value>
                <fullName>Interested in collecting and distributing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>