force-app/main/default/objects/Account/fields/APS_Research_Study_2018_9__c.field-meta.xml
<CustomField>
    <fullName>APS_Research_Study_2018_9__c</fullName>
    <description>Identifies the current phase of participation in the APS Research Study Project. Members who signed up and began but were unable to continue should be marked as Stopped participating.</description>
    <inlineHelpText>Identifies the current phase of participation in the APS Research Study Project. Members who signed up and began but were unable to continue should be marked as stopped participating.</inlineHelpText>
    <label>APS Research Study 2018-9</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Completed Year 1</fullName>
            </value>
            <value>
                <fullName>Completed Year 2</fullName>
            </value>
            <value>
                <fullName>Stopped Participating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>