force-app/main/default/objects/Account/fields/APS_Service_Area_Description__c.field-meta.xml
<CustomField>
    <fullName>APS_Service_Area_Description__c</fullName>
    <label>APS Service Area Description</label>
    <type>TextArea</type>
</CustomField>