force-app/main/default/objects/Account/fields/APS_Total_Distribution_2021__c.field-meta.xml
<CustomField>
    <fullName>APS_Total_Distribution_2021__c</fullName>
    <inlineHelpText>Total number of pads, liners and tampons distributed this calendar year so far, provided on quarterly updates.</inlineHelpText>
    <label>2021 APS Total Distribution</label>
    <summarizedField>APS_Update__c.Total_distributed__c</summarizedField>
    <summaryFilterItems>
        <field>APS_Update__c.Calendar_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </summaryFilterItems>
    <summaryForeignKey>APS_Update__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>