force-app/main/default/objects/Account/fields/APS_Twitter__c.field-meta.xml
<CustomField>
    <fullName>APS_Twitter__c</fullName>
    <description>APS Twitter profile used exclusively for period awareness and programs.</description>
    <inlineHelpText>APS Twitter profile used exclusively for period awareness and programs</inlineHelpText>
    <label>APS Twitter</label>
    <type>Url</type>
</CustomField>