force-app/main/default/objects/Account/fields/APS_Units_Distrib_Monthly__c.field-meta.xml
<CustomField>
    <fullName>APS_Units_Distrib_Monthly__c</fullName>
    <description>Average number of product units distributed per month</description>
    <inlineHelpText>Average number of product units distributed per month</inlineHelpText>
    <label>APS Units Distrib Monthly (avg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>