force-app/main/default/objects/Account/fields/APS_Units_Distributed_Annually__c.field-meta.xml
<CustomField>
    <fullName>APS_Units_Distributed_Annually__c</fullName>
    <label>APS Units Distributed Annually</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>