force-app/main/default/objects/Account/fields/APS_Units_Per_Individual_Monthly__c.field-meta.xml
<CustomField>
    <fullName>APS_Units_Per_Individual_Monthly__c</fullName>
    <description>The number of units, regardless of product type given to each individual monthly.</description>
    <label>APS Units Per Individual Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>