force-app/main/default/objects/Account/fields/APS_Website__c.field-meta.xml
<CustomField>
    <fullName>APS_Website__c</fullName>
    <description>Allied Program website, or program page within an organization&apos;s website</description>
    <inlineHelpText>Period supply program website, if different than organization website</inlineHelpText>
    <label>APS Website</label>
    <type>Url</type>
</CustomField>