force-app/main/default/objects/Account/fields/Assigned_staff__c.field-meta.xml
<CustomField>
    <fullName>Assigned_staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Staff currently validating data in this record.</description>
    <label>Assigned staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>