force-app/main/default/objects/Account/fields/Audience_Preference__c.field-meta.xml
<CustomField>
    <fullName>Audience_Preference__c</fullName>
    <label>Audience Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blog Posts</fullName>
            </value>
            <value>
                <fullName>Success Stories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>