force-app/main/default/objects/Account/fields/Auto_Update_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to automate flows</description>
    <label>Auto Update Checkbox</label>
    <type>Checkbox</type>
</CustomField>