force-app/main/default/objects/Account/fields/AVSFQB__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Billing_City__c</fullName>
    <label>Billing City</label>
    <length>31</length>
    <type>Text</type>
</CustomField>