force-app/main/default/objects/Account/fields/AVSFQB__Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Billing_Zip__c</fullName>
    <label>Billing Zip</label>
    <length>13</length>
    <type>Text</type>
</CustomField>