force-app/main/default/objects/Account/fields/AVSFQB__Fax__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Fax__c</fullName>
    <label>Fax</label>
    <length>21</length>
    <type>Text</type>
</CustomField>