force-app/main/default/objects/Account/fields/AVSFQB__Phone__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Phone__c</fullName>
    <inlineHelpText>phone number used in Quickbooks</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>