force-app/main/default/objects/Account/fields/AVSFQB__Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <length>5</length>
    <type>Text</type>
</CustomField>