force-app/main/default/objects/Account/fields/AVSFQB__Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Shipping_Address__c</fullName>
    <inlineHelpText>Full shipping address to accept products or packages</inlineHelpText>
    <label>Shipping Address</label>
    <type>TextArea</type>
</CustomField>