force-app/main/default/objects/Account/fields/AVSFQB__Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Shipping_City__c</fullName>
    <label>Shipping City</label>
    <length>31</length>
    <type>Text</type>
</CustomField>