force-app/main/default/objects/Account/fields/AVSFQB__Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Shipping_Zip__c</fullName>
    <label>Shipping Zip</label>
    <length>13</length>
    <type>Text</type>
</CustomField>