force-app/main/default/objects/Account/fields/AVSFQB__Terms__c.field-meta.xml
<CustomField>
    <fullName>AVSFQB__Terms__c</fullName>
    <label>Terms</label>
    <length>31</length>
    <type>Text</type>
</CustomField>