force-app/main/default/objects/Account/fields/Basic_Need_Products_Distributing__c.field-meta.xml
<CustomField>
    <fullName>Basic_Need_Products_Distributing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If member answers on the annual member survey that they provide other basic needs items they select what t.hey provide</description>
    <label>Basic Need Item Donations Accepted</label>
    <type>Checkbox</type>
</CustomField>