force-app/main/default/objects/Account/fields/Basic_Needs_2021_Donation__c.field-meta.xml
<CustomField>
    <fullName>Basic_Needs_2021_Donation__c</fullName>
    <label>Basic Needs 2021 Donation</label>
    <type>TextArea</type>
</CustomField>