force-app/main/default/objects/Account/fields/Basic_Needs_Donation_2018__c.field-meta.xml
<CustomField>
    <fullName>Basic_Needs_Donation_2018__c</fullName>
    <label>Basic Needs 2018 Donation</label>
    <type>TextArea</type>
</CustomField>