force-app/main/default/objects/Account/fields/Basic_Needs_Donation_2019__c.field-meta.xml
<CustomField>
    <fullName>Basic_Needs_Donation_2019__c</fullName>
    <inlineHelpText>List of products donated through or because of NDBN</inlineHelpText>
    <label>Basic Needs 2019 Donation</label>
    <type>TextArea</type>
</CustomField>