force-app/main/default/objects/Account/fields/Bay_door_9_ft_or_more__c.field-meta.xml
<CustomField>
    <fullName>Bay_door_9_ft_or_more__c</fullName>
    <inlineHelpText>Bay door for the storage space is at least 108 inches tall</inlineHelpText>
    <label>Bay door 9 ft or more</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>