force-app/main/default/objects/Account/fields/Bay_Fits_53_ft_Truck_Back_up__c.field-meta.xml
<CustomField>
    <fullName>Bay_Fits_53_ft_Truck_Back_up__c</fullName>
    <inlineHelpText>A 53 foot truck can safely back into your bay area.</inlineHelpText>
    <label>Bay Fits 53 ft Truck Back-up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>