force-app/main/default/objects/Account/fields/Benchmark_Survey_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Survey_Date_Submitted__c</fullName>
    <description>Date of the last benchmark survey</description>
    <inlineHelpText>Automatically sent over from FormAssembly on survey submission date.</inlineHelpText>
    <label>Benchmark Survey Date Submitted</label>
    <type>Date</type>
</CustomField>