force-app/main/default/objects/Account/fields/Benchmark_TA__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_TA__c</fullName>
    <description>Technical Assistance Note</description>
    <label>Benchmark TA</label>
    <length>155</length>
    <type>Text</type>
</CustomField>